evita_query/src/main/java/io/evitadb/api/query/parser/grammar/EvitaQLParser.java
// Generated from EvitaQL.g4 by ANTLR 4.9.2

package io.evitadb.api.query.parser.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EvitaQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, STRING=62, INT=63, FLOAT=64, BOOLEAN=65, DATE=66, 
		TIME=67, DATE_TIME=68, ZONED_DATE_TIME=69, NUMBER_RANGE=70, DATE_TIME_RANGE=71, 
		ENUM=72, LOCALE=73, ARGS_OPENING=74, ARGS_CLOSING=75, ARGS_DELIMITER=76, 
		MULTIPLE_OPENING=77, MULTIPLE_CLOSING=78, WHITESPACE=79, UNEXPECTED_CHAR=80;
	public static final int
		RULE_root = 0, RULE_query = 1, RULE_constraint = 2, RULE_headConstraint = 3, 
		RULE_filterConstraint = 4, RULE_orderConstraint = 5, RULE_requireConstraint = 6, 
		RULE_constraintListArgs = 7, RULE_emptyArgs = 8, RULE_filterConstraintContainerArgs = 9, 
		RULE_orderConstraintContainerArgs = 10, RULE_requireConstraintContainerArgs = 11, 
		RULE_nameArgs = 12, RULE_nameWithValueArgs = 13, RULE_nameWithValueListArgs = 14, 
		RULE_nameWithBetweenValuesArgs = 15, RULE_valueArgs = 16, RULE_valueListArgs = 17, 
		RULE_betweenValuesArgs = 18, RULE_nameListArgs = 19, RULE_valueWithNameListArgs = 20, 
		RULE_referencedTypesArgs = 21, RULE_entityTypeArgs = 22, RULE_entityTypeListArgs = 23, 
		RULE_entityTypeWithValueListArgs = 24, RULE_entityTypeWithFilterConstraintArgs = 25, 
		RULE_entityTypeWithOrderConstraintListArgs = 26, RULE_entityTypeWithRequireConstraintListArgs = 27, 
		RULE_withinHierarchyConstraintArgs = 28, RULE_withinRootHierarchyConstraintArgs = 29, 
		RULE_pageConstraintArgs = 30, RULE_stripConstraintArgs = 31, RULE_parentsOfTypeConstraintArgs = 32, 
		RULE_identifier = 33, RULE_literal = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "query", "constraint", "headConstraint", "filterConstraint", 
			"orderConstraint", "requireConstraint", "constraintListArgs", "emptyArgs", 
			"filterConstraintContainerArgs", "orderConstraintContainerArgs", "requireConstraintContainerArgs", 
			"nameArgs", "nameWithValueArgs", "nameWithValueListArgs", "nameWithBetweenValuesArgs", 
			"valueArgs", "valueListArgs", "betweenValuesArgs", "nameListArgs", "valueWithNameListArgs", 
			"referencedTypesArgs", "entityTypeArgs", "entityTypeListArgs", "entityTypeWithValueListArgs", 
			"entityTypeWithFilterConstraintArgs", "entityTypeWithOrderConstraintListArgs", 
			"entityTypeWithRequireConstraintListArgs", "withinHierarchyConstraintArgs", 
			"withinRootHierarchyConstraintArgs", "pageConstraintArgs", "stripConstraintArgs", 
			"parentsOfTypeConstraintArgs", "identifier", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'query'", "'entities'", "'filterBy'", "'and'", "'or'", "'not'", 
			"'userFilter'", "'equals'", "'greaterThan'", "'greaterThanEquals'", "'lessThan'", 
			"'lessThanEquals'", "'between'", "'inSet'", "'contains'", "'startsWith'", 
			"'endsWith'", "'isTrue'", "'isFalse'", "'isNull'", "'isNotNull'", "'inRange'", 
			"'primaryKey'", "'language'", "'priceInCurrency'", "'priceInPriceLists'", 
			"'priceValidIn'", "'priceBetween'", "'facet'", "'referenceHavingAttribute'", 
			"'withinHierarchy'", "'withinRootHierarchy'", "'directRelation'", "'excludingRoot'", 
			"'excluding'", "'orderBy'", "'ascending'", "'descending'", "'priceAscending'", 
			"'priceDescending'", "'random'", "'referenceAttribute'", "'require'", 
			"'page'", "'strip'", "'entityBody'", "'attributes'", "'prices'", "'associatedData'", 
			"'references'", "'useOfPrice'", "'dataInLanguage'", "'parents'", "'parentsOfType'", 
			"'facetSummary'", "'facetGroupsConjunction'", "'facetGroupsDisjunction'", 
			"'facetGroupsNegation'", "'attributeHistogram'", "'priceHistogram'", 
			"'hierarchyStatistics'", null, null, null, null, null, null, null, null, 
			null, null, null, null, "'('", "')'", "','", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "STRING", "INT", "FLOAT", "BOOLEAN", "DATE", "TIME", "DATE_TIME", 
			"ZONED_DATE_TIME", "NUMBER_RANGE", "DATE_TIME_RANGE", "ENUM", "LOCALE", 
			"ARGS_OPENING", "ARGS_CLOSING", "ARGS_DELIMITER", "MULTIPLE_OPENING", 
			"MULTIPLE_CLOSING", "WHITESPACE", "UNEXPECTED_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EvitaQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EvitaQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(EvitaQLParser.EOF, 0); }
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EvitaQLListener ) ((EvitaQLListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EvitaQLListener ) ((EvitaQLListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EvitaQLVisitor ) return ((EvitaQLVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				query();
				setState(71);
				match(EOF);
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__35:
			case T__36:
			case T__37:
			case T__38:
			case T__39:
			case T__40:
			case T__41:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case T__52:
			case T__53:
			case T__54:
			case T__55:
			case T__56:
			case T__57:
			case T__58:
			case T__59:
			case T__60:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				constraint();
				setState(74);
				match(EOF);
				}
				break;
			case STRING:
			case INT:
			case FLOAT:
			case BOOLEAN:
			case DATE:
			case TIME:
			case DATE_TIME:
			case ZONED_DATE_TIME:
			case NUMBER_RANGE:
			case DATE_TIME_RANGE:
			case ENUM:
			case LOCALE:
			case MULTIPLE_OPENING:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				literal();
				setState(77);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public ConstraintListArgsContext args;
		public ConstraintListArgsContext constraintListArgs() {
			return getRuleContext(ConstraintListArgsContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EvitaQLListener ) ((EvitaQLListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EvitaQLListener ) ((EvitaQLListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EvitaQLVisitor ) return ((EvitaQLVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__0);
			setState(82);
			((QueryContext)_localctx).args = constraintListArgs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintContext extends ParserRuleContext {
		public HeadConstraintContext headConstraint() {
			return getRuleContext(HeadConstraintContext.class,0);
		}
		public FilterConstraintContext filterConstraint() {
			return getRuleContext(FilterConstraintContext.class,0);
		}
		public OrderConstraintContext orderConstraint() {
			return getRuleContext(OrderConstraintContext.class,0);
		}
		public RequireConstraintContext requireConstraint() {
			return getRuleContext(RequireConstraintContext.class,0);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EvitaQLListener ) ((EvitaQLListener)listener).enterConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EvitaQLListener ) ((EvitaQLListener)listener).exitConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EvitaQLVisitor ) return ((EvitaQLVisitor<? extends T>)visitor).visitConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstraintContext constraint() throws RecognitionException {
		ConstraintContext _localctx = new ConstraintContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constraint);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				headConstraint();
				}
				break;
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				filterConstraint();
				}
				break;
			case T__35:
			case T__36:
			case T__37:
			case T__38:
			case T__39:
			case T__40:
			case T__41:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				orderConstraint();
				}
				break;
			case T__42:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case T__52:
			case T__53:
			case T__54:
			case T__55:
			case T__56:
			case T__57:
			case T__58:
			case T__59:
			case T__60:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				requireConstraint();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadConstraintContext extends ParserRuleContext {
		public HeadConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headConstraint; }
	 
		public HeadConstraintContext() { }
		public void copyFrom(HeadConstraintContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EntitiesConstraintContext extends HeadConstraintContext {
		public EntityTypeArgsContext args;
		public EntityTypeArgsContext entityTypeArgs() {
			return getRuleContext(EntityTypeArgsContext.class,0);
		}
		public EntitiesConstraintContext(HeadConstraintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EvitaQLListener ) ((EvitaQLListener)listener).enterEntitiesConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EvitaQLListener ) ((EvitaQLListener)listener).exitEntitiesConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EvitaQLVisitor ) return ((EvitaQLVisitor<? extends T>)visitor).visitEntitiesConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadConstraintContext headConstraint() throws RecognitionException {
		HeadConstraintContext _localctx = new HeadConstraintContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_headConstraint);
		try {
			_localctx = new EntitiesConstraintContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__1);
			setState(91);
			((EntitiesConstraintContext)_localctx).args = entityTypeArgs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
